Update pom.xml: Skip javadoc generation due to preview features